Added opengraph metatags to improve website preview when sharing on social media

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Andalûh Transcriptor" />
+  <meta property="og:description" content="Compara textos entre Castellano y Andalûh EPA" />
+  <meta property="og:site_name" content="AndaluGeeks" />
+  <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1qn5W4C-2MhnO2O2E42YiQ6mMj0a90TZO" />
+
   <title>Andaluh transcriptor - AndaluGeeks</title>
   <base href="./">
 
