Improved opengraph bookmarklet descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Andalûh Transcriptor" />
-  <meta property="og:description" content="Compara textos entre Castellano y Andalûh EPA" />
-  <meta property="og:site_name" content="AndaluGeeks" />
-  <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1qn5W4C-2MhnO2O2E42YiQ6mMj0a90TZO" />
+
+  <meta property="og:title" content="¿Te cuesta entender el Andalûh?"/>
+  <meta property="og:description" content="¡No te sulfures! Accede para conocer y aprender Andalûh EPA con las apps de AndaluGeeks." />
+  <meta property="og:site_name" content="Transcriptor Andalûh" />
+  <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1UleA6JSOlsXVGzVgl7n9vVOuzMEkuAPm" />
 
   <title>Andaluh transcriptor - AndaluGeeks</title>
   <base href="./">
